# dbu.fall.python.final.groupB

./: .gitignore  Proposal for Stocks Sentiment.docx  Proposal for stocks.py  Proposal.py  README.md  daily_sentiment_prices.csv  final_project_proposal.py  git_runner.py  git_runner_v2.py  main.py  pyproject.toml  verify_load.py
.trae/rules/: project_rules.md
FakeRealNews/: train.py
Stock_Sentiment_Project/: Google_News_Data_official.csv  app.py  googl_daily_prices.csv  stock_sentiment_train.py
Stock_Sentiment_Project/artifacts/: daily_sentiment_prices_12_15.csv  data_with_sentiment.csv  model.pkl  scaler.pkl
Stock_Sentiment_Project/models/: rf_sentiment_classifier.pkl
Stock_Sentiment_Project/tamplate/: index.html
Stock_Sentiment_Project/templates/: index.html  train_result.html
artifacts/: data_with_sentiment.csv
eda/: EDA - Fake News.ipynb
